--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <h3 class="titulo">Login!</h3>
                 <div>
                     <label for="email">Correo Electrónico:</label>
-                    <input type="text" class="form-control" name="email" id="email" placeholder="example@example.com">
+                    <input type="text" class="form-control" name="email" id="email" placeholder="example@example.com" required>
                 </div>
                 <div>
                     <label for="password">Contraseña:</label>
-                    <input type="text" class="form-control" name="password" id="********" placeholder="password">
+                    <input type="text" class="form-control" name="password" id="********" placeholder="password" required>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" name="remember" id="remember">
