--- a/index.html
+++ b/index.html
@@ -12,20 +12,23 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <script src="script.js"></script>
+
 </head>
+
 <body>
 
     <main class="container">
         <div class="form-container">
-            <form class="form-login" action="">
+            <form class="form-login" onsubmit="login(event)">
                 <h3 class="titulo">Login!</h3>
                 <div>
                     <label for="email">Correo Electrónico:</label>
-                    <input type="text" class="form-control" name="email" id="email" placeholder="example@example.com" required>
+                    <input type="email" class="form-control" name="email" id="email" placeholder="example@example.com" required>
                 </div>
                 <div>
                     <label for="password">Contraseña:</label>
-                    <input type="text" class="form-control" name="password" id="********" placeholder="password" required>
+                    <input type="password" class="form-control" name="password" id="password" minlength="6" maxlength="12" placeholder="********" required>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" name="remember" id="remember">
@@ -35,10 +38,14 @@
                     <button type="submit" class="btn btn-primary"><i class="bi bi-check2"></i> Enviar</button>
                 </div>
                 <div>
+                    <h6 class="error-messange" id="error"></h6>
+                </div>
+                <div>
                     <p>®2017-2021</p>
                 </div>
             </form>
         </div>
+
     </main>
     
 </body>
