--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="style.css">
 
-    <script src="script.js"></script>
+    <script src="/JS/script.js"></script>
 
 </head>
 
@@ -41,7 +41,7 @@
                     <h6 class="error-messange" id="error"></h6>
                 </div>
                 <div>
-                    <p>®2017-2021</p>
+                    <p class="registred">®2017-2021</p>
                 </div>
             </form>
         </div>
